# robotic-arm-ros2

./: readme.md
my_robotic_arm/: CMakeLists.txt  package.xml
my_robotic_arm/config/: Arm_Urdf.csv
my_robotic_arm/launch/: display.launch.py
my_robotic_arm/urdf/: Arm_Urdf.urdf
